<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/vector_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_school"
        android:icon="@drawable/vector_school"
        android:title="@string/title_school" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/vector_calendar"
        android:title="@string/title_schedule" />


    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/vector_report"
        android:title="@string/title_report" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/vector_profile"
        android:title="@string/title_profile" />

</menu>